--- a/css/style.css
+++ b/css/style.css
@@ -88,9 +88,9 @@ nav #navbar > li > a:hover {
 	box-shadow: 0 -3px 50px rgba(0, 200, 255, 0.40);
 	background-repeat: no-repeat;
 	background-position: center;
-	background-image: -webkit-linear-gradient(top, #137781, #116A73);
-	background-image: linear-gradient(to bottom, #137781, #116A73);
-	background-color: #137781;
+	background-image: -webkit-linear-gradient(top, #1CA9B8, #22828B);
+	background-image: linear-gradient(to bottom, #1CA9B8, #22828B);
+	background-color: #1CA9B8;
 	overflow:hidden;
 }
 
