--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,8 @@ nav #navbar > li > a:hover {
 
 .content {
 	color: #B5B5B5;
-	border-top: 1px solid #222;
-	background-color: #131313;
+	border-top: 1px solid #444;
+	background-color: #252525;
 	-webkit-box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5);
 	box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5);
 	padding-top: 40px;
@@ -191,12 +191,12 @@ nav #navbar > li > a:hover {
 	margin-left: 0;
 }
 
-.span3, .span4 {
-	margin-left: 30px;
+.span3, .span4, .span6 {
+	margin: 20px 0 0 30px;
 	padding-bottom: 20px;
 	float: left;
 	border-radius: 10px;
-	background-color: #101010;
+	background-color: #191919;
 }
 
 .span3 {
@@ -205,6 +205,15 @@ nav #navbar > li > a:hover {
 
 .span4 {
 	width: 370px;
+}
+
+.span6 {
+	width: 570px;
+}
+
+.product {
+	border: 1px solid #444;
+	border-radius: 7px;
 }
 
 /* Content - End */
@@ -217,8 +226,8 @@ footer {
 	border-top: 1px solid #191919;
 	background-color: #000;
 	box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.6);
-	background-image: -webkit-linear-gradient(top, #050505, #000);
-	background-image: linear-gradient(to bottom, #050505, #000);
+	background-image: -webkit-linear-gradient(top, #131313, #050505);
+	background-image: linear-gradient(to bottom, #131313, #050505);
 	overflow: hidden;
 	clear: both;
 }
