--- a/css/style.css
+++ b/css/style.css
@@ -211,8 +211,13 @@ nav #navbar > li > a:hover {
 	width: 570px;
 }
 
-.product {
-	border: 1px solid #444;
+.span6 {
+	width: 570px;
+}
+
+.products img{
+	padding: 5px;
+	border: 1px solid #333;
 	border-radius: 7px;
 }
 
