--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,17 @@ nav #navbar > li > a {
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
+nav #navbar > li > #nav-sub {
+	color: #fff;
+	background-image: -webkit-linear-gradient(top, #550000, #a90000);
+	border-bottom: 1px solid #b00;
+	padding-bottom: 9px;
+	line-height: 19px;
+	text-shadow: 0 -1px 0 #000;
+	display: block;
+	border-radius: 5px;
+}
+
 nav #navbar > .active > a {
 	color: #fff;
 	background-color: #111;
@@ -191,7 +202,7 @@ nav #navbar > li > a:hover {
 	margin-left: 0;
 }
 
-.span3, .span4, .span6 {
+.span3, .span4, .span6, .span12 {
 	margin: 20px 0 0 30px;
 	padding-bottom: 20px;
 	float: left;
@@ -211,8 +222,8 @@ nav #navbar > li > a:hover {
 	width: 570px;
 }
 
-.span6 {
-	width: 570px;
+.span12 {
+	width: 1170px;
 }
 
 .products img{
@@ -291,7 +302,6 @@ footer .backtop {
 .buy:hover {
 	background-image: -webkit-linear-gradient(top, #116A73, #095e68);
 	background-image: linear-gradient(to bottom, #116A73, #095e68);
-	margin-bottom: 10px;
 }
 
 .label_buy {
