--- a/css/style.css
+++ b/css/style.css
@@ -202,12 +202,12 @@ nav #navbar > li > a:hover {
 	margin-left: 0;
 }
 
-.span3, .span4, .span6, .span12 {
+.span3, .span4, .span6, .span8, .span12 {
 	margin: 20px 0 0 30px;
 	padding-bottom: 20px;
 	float: left;
 	border-radius: 10px;
-	background-color: #191919;
+	background-color: #191919;`
 }
 
 .span3 {
@@ -222,11 +222,15 @@ nav #navbar > li > a:hover {
 	width: 570px;
 }
 
+.span8 {
+	width: 770px;
+}
+
 .span12 {
 	width: 1170px;
 }
 
-.products img{
+.products img, .about video{
 	padding: 5px;
 	border: 1px solid #333;
 	border-radius: 7px;
@@ -321,4 +325,76 @@ footer .backtop {
 	border-top: 1px solid #f00;
 	border-bottom: 1px solid #a00;
 	box-shadow: 0 1px 5px #000, 0 0 2px #111;
+}
+
+/* Contact - start */
+
+.contact p {
+	margin-top: 30px;
+	font-size: 30px;
+	color: #777;
+	text-shadow: 0 1px 1px #000;
+}
+
+.contact input, .content textarea {
+	background-color: #000;
+	border-radius: 5px;
+	border: none;
+	min-height: 30px;
+	width: 660px;
+	color: #333;
+	padding: 10px 20px;
+	font-size: 25px;
+	text-align: center;
+}
+
+.content textarea {
+	height: 200px;
+}
+
+#sendmail {
+	background-color: #000;
+	border-radius: 5px;
+	overflow: hidden;
+	margin: 35px;
+}
+
+#mail {
+	float: left;
+	margin-top: 40px;
+}
+
+#mailbox {
+	border: none;
+	width: 160px;
+	height: 170px;
+	float: right;
+	background-image: url(../img/mailbox.png);
+	background-repeat: no-repeat;
+	background-position: 16px 40px;
+}
+
+#sendmail label {
+	line-height: 170px;
+}
+
+/* contact - end */
+
+/* about - start */
+
+.about .row > * {
+	padding-top: 50px;
+}
+
+.about p {
+	line-height: 40px;
+	font-size: 25px;
+	text-shadow: 1px 1px 0 #000;
+}
+
+.about #mapholder {
+	width: 800px;
+	height: 500px;
+	border: 10px solid #333;
+	margin: 0 auto;
 }
